Fire hide/show extra events

--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -70,6 +70,11 @@
         this.refs.main.setAttribute('shortcut', shortcut);
       }
     },
+    onupdate({ changed, current }) {
+      if (changed.showExtra) {
+        this.fire(current.showExtra ? 'showExtra' : 'hideExtra');
+      }
+    },
     methods: {
       _handleClick({ event, href }) {
         /** If clicked on a "link" row, push the page to the router */
