--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -9,6 +9,8 @@
     promise={_printingPromise}
     delay={0}
     bgColor="#fff"
+    on:success="set({ _state: STATES.SUCCESS })"
+    on:failure="set({ _state: STATES.FAILURE })"
     fullscreen
   >
     <div class="printing-sprite"></div>
@@ -68,7 +70,7 @@
     },
     methods: {
       print(printerOptions) {
-        const { dithering, id } = this.get();
+        const { dithering, id, showPrintingDialog } = this.get();
         const content = this.refs.printableContent;
 
         /** Default printing parameters */
@@ -81,11 +83,29 @@
           printerOptions,
         );
 
-        const _printingPromise = Printer.print(content, printerOptions)
-          .then(() => this.set({ _state: STATES.SUCCESS }))
-          .catch(() => this.set({ _state: STATES.FAILURE }));
+        const _printingPromise = Printer.print(content, printerOptions);
 
-        this.set({ _state: STATES.PRINTING, _printingPromise });
+        /**
+         * If we don't use the printingDialog,
+         * let's update the state with the printing promise resolution.
+         *
+         * Obs: for showPrintingDialog=true this logic is encapsulated inside the
+         * <PromiseDialog on:success and on:failure/>
+         * */
+        if (printerOptions.print_to_paper === false) {
+          /** If virtual printing (save printable img only), dispatch the finish event */
+          return Promise.resolve().then(() => {
+            this.fire('finish', true);
+          });
+        }
+
+        if (!showPrintingDialog) {
+          _printingPromise
+            .then(() => this.set({ _state: STATES.SUCCESS }))
+            .catch(() => this.set({ _state: STATES.FAILURE }));
+        } else {
+          this.set({ _state: STATES.PRINTING, _printingPromise });
+        }
 
         /** We return a promise that resolves ONLY when the 'finish' event is fired */
         return new Promise(res => {
