--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -1,7 +1,39 @@
-<div ref:approot id="app-root"></div>
+<div class="lock-screen">
+  <time>{time}</time>
+  <div class="merchant">TESTE - Bandeiras VAN</div>
+  <div class="actions"></div>
+</div>
+
+<div ref:approot id="app-r2oot"></div>
+
+
+<script>
+  import Registry from '../registry/manager.js';
+
+  const { hours: initHours, minutes: initMinutes } = Registry.getCurrentTime();
+
+  export default {
+    data() {
+      return {
+        time: `${initHours}:${initMinutes}`,
+      };
+    },
+    oncreate() {
+      /** Update the clock after each second */
+      Registry.on('clock', (newHours, newMinutes) => {
+        this.set({ time: `${newHours}:${newMinutes}` });
+      });
+    },
+  };
+</script>
 
 <style>
   ref:approot {
     height: 100%;
+  }
+
+  .lock-screen {
+    height: 100%;
+    background-color: #fff;
   }
 </style>
