Fix printable reprint when error has occured

--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -71,7 +71,7 @@
     methods: {
       print(printerOptions) {
         const { dithering, id, showPrintingDialog } = this.get();
-        const content = this.refs.printableContent;
+        const contentEl = this.refs.printableContent;
 
         /** Default printing parameters */
         printerOptions = Object.assign(
@@ -83,7 +83,7 @@
           printerOptions,
         );
 
-        const _printingPromise = Printer.print(content, printerOptions);
+        const _printingPromise = Printer.print(contentEl, printerOptions);
 
         if (printerOptions.print_to_paper === false) {
           /** If virtual printing (save printable img only), dispatch the finish event */
@@ -100,6 +100,7 @@
          * <PromiseDialog on:success and on:failure/>
          * */
         if (!showPrintingDialog) {
+          this.set({ _state: STATES.PRINTING });
           _printingPromise
             .then(() => this.set({ _state: STATES.SUCCESS }))
             .catch(() => this.set({ _state: STATES.FAILURE }));
