--- a/packages/pos/simulator/plugins/view/partials/Screen.html
+++ b/packages/pos/simulator/plugins/view/partials/Screen.html
@@ -93,11 +93,25 @@
       }
     }
 
-    /* Hide all scrollbars */
+    /* Hide all scrollbars for webkit based browsers */
     ::-webkit-scrollbar {
       display: none;
       width: 0px;
       background: transparent;
+    }
+
+    /* Hide all scrollbars for firefox > 63 */
+    /* For now, must set the tag 'layout.css.scrollbar-width.enabled' to 'true' in 'about:config' */
+    /* https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-width#Browser_Compatibility */
+    @supports (scrollbar-width: none) {
+      .content :global(*) {
+        &,
+        &::before,
+        &::after {
+          /* stylelint-disable-next-line */
+          scrollbar-width: none;
+        }
+      }
     }
 
     .brightness {
