--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -120,7 +120,7 @@
     width: 100%;
     bottom: 0;
 
-    :global(.app.has-appbar) &:not(.is-fullscreen) {
+    :global(#app-root.has-appbar) &:not(.is-fullscreen) {
       top: $appbar-height;
 
       &::before {
