--- a/packages/styles/src/includes/base.pcss
+++ b/packages/styles/src/includes/base.pcss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  height: 100%;
+  min-height: 100%;
   color: $default-text-color;
   font-style: normal;
   font-weight: normal;
