--- a/packages/components/QRCode/QRCode.html
+++ b/packages/components/QRCode/QRCode.html
@@ -31,6 +31,7 @@
     onupdate({ current }) {
       const { size, color, value, level } = current;
 
+      /* istanbul ignore next */
       qrEl.set({
         size: SIZES[String(size).toUpperCase()] || 140,
         foreground: color,
