Fix printable tests overlapping each other

--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -45,9 +45,11 @@
       Dialog: '@mamba/dialog',
       ConfirmationDialog: '@mamba/dialog/Confirmation.html',
     },
+    helpers: {
+      STATES,
+    },
     data() {
       return {
-        STATES,
         _state: STATES.IDLE,
         _paperWidth: PAPER_WIDTH,
         dithering: false,
