--- a/packages/components/Dialog/Promised.html
+++ b/packages/components/Dialog/Promised.html
@@ -1,4 +1,10 @@
-<Dialog ref:dialog {..._dialogProps} bind:isOpen>
+<Dialog
+  ref:dialog
+  {..._dialogProps}
+  bind:isOpen
+  on:open
+  on:close
+>
   <slot></slot>
 </Dialog>
 
@@ -17,23 +23,26 @@
     computed: {
       _dialogProps: ({ promise, delay, ...props }) => props,
     },
-    onupdate({ changed, current: { promise, delay } }) {
+    onupdate({ changed, current: { promise } }) {
       if (changed.promise && promise && typeof promise.then === 'function') {
         promise
-          .then(() => {
-            setTimeout(() => {
-              this.refs.dialog.close();
-              this.fire('success');
-            }, parseFloat(delay));
-          })
-          .catch(e => {
-            setTimeout(() => {
-              this.refs.dialog.close();
-              this.fire('failure', e);
-            }, parseFloat(delay));
-          });
+          .then(data => this._close('success', data))
+          .catch(e => this._close('failure', e));
         this.refs.dialog.open();
       }
+    },
+    methods: {
+      _close(event, data) {
+        const { delay } = this.get();
+
+        setTimeout(() => {
+          /** Safeguarding in case the component was destroyed before promise resolvement */
+          if (this.refs.dialog) {
+            this.refs.dialog.close();
+          }
+          this.fire(event, data);
+        }, parseFloat(delay));
+      },
     },
   };
 </script>
