--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -7,7 +7,7 @@
 <script>
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import Keystroke from '@mamba/app/Keystroke.html';
+  import Keystroke from './Keystroke.html';
 
   /** Return if a certain shortcut key is valid */
   const isValidShortcut = (keyName, e) =>
