--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -1,34 +1,34 @@
-<div class="launcher">
-  {#if STATE === STATES.LOCKSCREEN}
-    <div class="lock-screen">
-      <time>{time}</time>
-      <div class="merchant">TESTE - Bandeiras VAN</div>
-      <div class="actions"></div>
 
-      <Button size="full" bottom on:click="gotoHome()" shortcut="enter">
-        <Icon symbol="home" color="#fff"/>
-      </Button>
-    </div>
+{#if STATE === STATES.APP}
+  <div ref:approot id="app-root"></div>
+{:else}
+  <div class="launcher">
+    {#if STATE === STATES.LOCKSCREEN}
+      <div class="lock-screen">
+        <time>{time}</time>
+        <div class="merchant">SIMULAÇÃO - Lojista</div>
+        <div class="actions"></div>
 
-    <Keystroke key="enter" on:keystroke="gotoHome()" />
-  {/if}
+        <Button size="full" bottom on:click="gotoHome()" shortcut="enter">
+          <Icon symbol="home" color="#fff"/>
+        </Button>
+      </div>
 
-  {#if STATE === STATES.HOME}
-    <div class="home">
-      <h1>SOU A HOME</h1>
-      <Button size="full" bottom on:click="openApp()">
-        ABRIR
-      </Button>
-    </div>
-    <Keystroke key="back" on:keystroke="gotoLockscreen()" />
-    <Keystroke key="close" on:keystroke="gotoLockscreen()" />
-  {/if}
+      <Keystroke key="enter" on:keystroke="gotoHome()" />
+    {/if}
 
-  {#if STATE === STATES.APP}
-    <div ref:approot id="app-root"></div>
-  {/if}
-</div>
-
+    {#if STATE === STATES.HOME}
+      <div class="home">
+        <h1>SOU A HOME</h1>
+        <Button size="full" bottom on:click="openApp()">
+          ABRIR
+        </Button>
+      </div>
+      <Keystroke key="back" on:keystroke="gotoLockscreen()" />
+      <Keystroke key="close" on:keystroke="gotoLockscreen()" />
+    {/if}
+  </div>
+{/if}
 
 <script>
   import AppManager from '../app/manager.js';
@@ -94,10 +94,18 @@
 
   ref:approot {
     height: 100%;
+
+    @media (min-width: 481px) {
+      overflow: auto;
+    }
+  }
+
+  :global(body) {
+    height: 100%;
   }
 
   .launcher {
-    height: 100%;
+    min-height: 100%;
     background-color: #fff;
   }
 
