Open main app by default

--- a/packages/pos/simulator/plugins/view/POS.html
+++ b/packages/pos/simulator/plugins/view/POS.html
@@ -6,9 +6,7 @@
         <div class="pos">
           <Printer ref:printer />
           <Screen ref:screen>
-            <Launcher>
-              <slot></slot>
-            </Launcher>
+            <Launcher />
           </Screen>
           <Keypad ref:keypad />
         </div>
