--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -19,10 +19,12 @@
 
     {#if STATE === STATES.HOME}
       <div class="home">
-        <h1>SOU A HOME</h1>
-        <Button size="full" bottom on:click="openApp()">
-          ABRIR
-        </Button>
+        {#each Object.values(apps) as app}
+          <div on:click="openApp(app)">
+            <img src="data:image/png;base64,{app.manifest.iconBase64}" alt="">
+            {app.manifest.appName}
+          </div>
+        {/each}
       </div>
       <Keystroke key="back" on:keystroke="gotoLockscreen()" />
       <Keystroke key="close" on:keystroke="gotoLockscreen()" />
@@ -53,6 +55,7 @@
       return {
         STATE: STATES.LOCKSCREEN,
         time: `${initHours}:${initMinutes}`,
+        apps: {},
       };
     },
     oncreate() {
@@ -60,30 +63,40 @@
       Registry.on('clock', (newHours, newMinutes) => {
         this.set({ time: `${newHours}:${newMinutes}` });
       });
-    },
-    onupdate({ changed, current }) {
-      if (changed.STATE) {
-        if (current.STATE === STATES.APP) {
-          const appObj = AppManager.getInstalledApps()
-            .values()
-            .next().value;
-          AppManager.open(appObj.constructor, this.refs.approot);
-          AppManager.once('closed', () => {
-            window.history.pushState(null, null, '/');
-            this.set({ STATE: STATES.LOCKSCREEN });
-          });
+
+      /** Listen to an app being opened and guarantee the Launcher is ready to open it */
+      AppManager.on('willOpen', () => {
+        const { STATE } = this.get();
+        if (STATE !== STATES.APP) {
+          this.set({ STATE: STATES.APP });
         }
-      }
+      });
+
+      AppManager.on('closed', () => {
+        window.history.pushState(null, null, '/');
+        this.set({ STATE: STATES.HOME });
+      });
+
+      AppManager.on('appInstalled', appMeta => {
+        const { apps } = this.get();
+        this.set({
+          apps: {
+            ...apps,
+            [appMeta.manifest.slug]: appMeta,
+          },
+        });
+      });
     },
     methods: {
+      openApp(appMeta) {
+        this.set({ STATE: STATES.APP });
+        AppManager.open(appMeta.manifest.slug);
+      },
       gotoLockscreen() {
         this.set({ STATE: STATES.LOCKSCREEN });
       },
       gotoHome() {
         this.set({ STATE: STATES.HOME });
-      },
-      openApp() {
-        this.set({ STATE: STATES.APP });
       },
     },
   };
