--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -1,4 +1,7 @@
-<svelte:window on:keyup="onKeyup(event)" on:keydown="onKeydown(event)"/>
+<svelte:window
+  on:keyup="onKeyup(event)"
+  on:keydown="onKeydown(event)"
+/>
 
 <div class="app">
   <slot></slot>
@@ -10,7 +13,7 @@
   import { hasActiveHandlerFor } from './includes/KeystrokeRegister.js';
 
   /** Return if a certain shortcut key is valid */
-  const isValidShortcut = (keyName, e) =>
+  const isInputFocused = (keyName, e) =>
     keyName &&
     e.target.tagName !== 'INPUT' &&
     document.activeElement.tagName !== 'INPUT';
@@ -27,7 +30,7 @@
     oncreate() {
       const { root } = this;
 
-      root.on('navigation', (navigation = { home: true, back: true }) => {
+      root.on('navigation', navigation => {
         if (typeof navigation === 'boolean') {
           this.set({ navigation: { home: navigation, back: navigation } });
         } else {
@@ -65,11 +68,6 @@
       }
     },
     methods: {
-      _goBack() {
-        if (this.root.router && this.root.router.get().path !== '/') {
-          this.root.router.back();
-        }
-      },
       isNavigationEnabled() {
         const { home, back } = this.get().navigation;
         return home && back;
@@ -79,9 +77,11 @@
         const keyName = Keyboard.getKeyName(e.keyCode);
         if (
           (keyName === 'back' || keyName === 'enter') &&
-          isValidShortcut(keyName, e)
+          isInputFocused(keyName, e)
         ) {
           e.preventDefault();
+          e.stopPropagation();
+          return false;
         }
       },
       onKeyup(e) {
@@ -108,7 +108,7 @@
         }
 
         /** If the key is not mapped or a input is focused, do nothing */
-        if (!isValidShortcut(keyName, e)) {
+        if (!isInputFocused(keyName, e)) {
           return;
         }
 
@@ -117,7 +117,9 @@
           /** Guarantees that the 'back' button is enabled and navigation is enabled */
           if (Keyboard.isBackspaceEnabled() && this.get().navigation.back) {
             e.preventDefault();
-            this._goBack();
+            if (this.root.router && this.root.router.get().path !== '/') {
+              this.root.router.back();
+            }
           }
           return;
         }
