--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -25,6 +25,7 @@
 </div>
 
 <script>
+  /* istanbul ignore next */
   function findClosest(el, cb) {
     if (!el || el.nodeType !== 1) return null;
     if (el && !cb(el)) return findClosest(el.parentNode, cb);
@@ -75,6 +76,9 @@
     },
     methods: {
       _handleClick({ event, href }) {
+        /** Fire the row's click event for listening parent components */
+        this.fire('click');
+
         /** If clicked on a "link" row, push the page to the router */
         if (href && this.root.router) {
           return this.root.router.go(href);
@@ -100,13 +104,9 @@
                * the element method that triggers it (like click)
                * */
               triggerEl[triggerEl.dataset.controllerTrigger]();
-              return;
             }
           }
         }
-
-        /** Fire the row's click event for listening parent components */
-        this.fire('click');
       },
     },
   };
