--- a/packages/pos/simulator/plugins/view/hardware/Screen.html
+++ b/packages/pos/simulator/plugins/view/hardware/Screen.html
@@ -5,11 +5,11 @@
       <div class="version">{version}</div>
     </div>
     <div>
-      <div class="version">{time}</div>
+      <div class="time">{time}</div>
     </div>
   </div>
   <div class="content">
-    <div id="app-root"></div>
+    <slot></slot>
   </div>
 </div>
 
@@ -27,22 +27,35 @@
 </svg>
 
 <script>
+  import Registry from '../../registry/manager.js';
+
+  const { hours: initHours, minutes: initMinutes } = Registry.getCurrentTime();
+
   export default {
     data() {
       return {
-        time: '00:00',
-        version: '2.5.0',
         brightnessLevel: 10,
+        version: Registry.getVersion(),
+        time: `${initHours}:${initMinutes}`,
       };
     },
     computed: {
       brightnessOpacity: ({ brightnessLevel }) => 1 - brightnessLevel / 10,
     },
+    oncreate() {
+      /** Update the clock after each second */
+      Registry.on('clock', (newHours, newMinutes) => {
+        this.set({ time: `${newHours}:${newMinutes}` });
+      });
+    },
   };
 </script>
 
 <style type="text/postcss">
-  @import '@mamba/styles/theme.pcss';
+  .screen,
+  .content {
+    height: 100%;
+  }
 
   @media (max-width: 480px) {
     .status-bar {
@@ -59,12 +72,6 @@
   }
 
   @media (min-width: 481px) {
-    /* stylelint-disable-next-line */
-    #app-root {
-      height: 100%;
-      overflow: auto;
-    }
-
     .screen {
       position: absolute;
       top: 231px;
